--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "redsys/tpv",
+    "name": "drauta/redsys-tpv",
     "keywords": ["tpv", "redsys", "sermepa", "servired"],
     "description": "Package to connect with Redsys/Sermepa/Servired TPV",
     "license": "MIT",
